--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -1960,6 +1960,14 @@ def _can_use_cudnn_attention(params: _SDPAParams, debug: _bool) -> _bool: ...
 def _can_use_flash_attention(params: _SDPAParams, debug: _bool) -> _bool: ...
 def _can_use_mem_efficient_attention(params: _SDPAParams, debug: _bool) -> _bool: ...
 
+# Defined in torch/csrc/cuda/GdsFile.cpp
+def gds_register_buffer(t: torch.UntypedStorage) -> None: ...
+def gds_deregister_buffer(t: torch.UntypedStorage) -> None: ...
+def gds_register_handle(fd: int) -> int: ...
+def gds_deregister_handle(handle: int) -> None: ...
+def gds_load_storage(handle: int, s: torch.UntypedStorage, offset: int) -> None: ...
+def gds_save_storage(handle: int, s: torch.UntypedStorage, offset: int) -> None: ...
+
 # Defined in torch/csrc/cuda/python_comm.cpp
 def _broadcast(tensor: Tensor, devices: List[_int]) -> List[Tensor]: ...
 def _broadcast_out(tensor: Tensor, out_tensors: List[Tensor]) -> List[Tensor]: ...
